fix: added validator node list + misc improvements
