# src/indexer-sdk/model/nodeStatusResponseDto.ts
@@ -11,4 +11,8 @@ export interface NodeStatusResponseDto {
   nodeId: string;
   status: NodeStatusResponseDtoStatus;
   statusTimestamp: number;
+  moniker: string;
+  latency: number;
+  txInMempool: number;
+  height: number;
 }
